welcome.lessons.welcome.methods.args.MethodsArgs.scala.error
Program:3: error: Boolean does not take parameters
  if (versLavant()){
                ^