welcome.lessons.welcome.methods.args.MethodsArgs.scala.code
def move(nbPas: Int, versLavant: Boolean){
  if (versLavant()){
    avance(nbPas)
  }
  else{
    recule(nbPas)
  }
}